--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+
+            </iframe>
         </section>
 
         <section id="redes-sociais">
-            <a href="https://www.facebook.com/otaviorivelli" name="face" id="face" target="_blank"><img src="imagens/logo-facebook.jpg" alt=""></a>
+            <a href="#" target="tela"> <img src="imagens/logo-home.jpg" alt=""></a><br>
+            <a href="https://www.youtube.com" target="tela"> <img src="imagens/logo-youtube.jpg" alt=""></a><br>
+            <a href="#" target="tela"> <img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="https://www.instagram.com" target="tela"> <img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="https://www.globo.com" target="tela"> <img src="imagens/logo-twitter.jpg" alt=""></a><br>
+            <a href="https://www.facebook.com/otaviorivelli" target="tela"> <img src="imagens/logo-facebook.jpg" alt=""></a>
+
 
         </section>
     </main>
