--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto redes sociais</title>
 
-</head>
+</head>  
 <body>
-    <main>
+    <main> 
+        
         <section id="telefone">
             <iframe src="home.html" name="tela" id="tela" frameborder="0">
 
@@ -18,9 +19,9 @@
         </section>
 
         <section id="redes-sociais">
-            <a href="#" target="tela"> <img src="imagens/logo-home.jpg" alt=""></a><br>
-            <a href="https://www.youtube.com" target="tela"> <img src="imagens/logo-youtube.jpg" alt=""></a><br>
-            <a href="#" target="tela"> <img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt=""></a><br>
+            <a href="youtube.html" target="tela"> <img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="github.html" target="tela"> <img src="imagens/logo-github.jpg" alt=""></a><br>
             <a href="https://www.instagram.com" target="tela"> <img src="imagens/logo-instagram.jpg" alt=""></a><br>
             <a href="https://www.globo.com" target="tela"> <img src="imagens/logo-twitter.jpg" alt=""></a><br>
             <a href="https://www.facebook.com/otaviorivelli" target="tela"> <img src="imagens/logo-facebook.jpg" alt=""></a>
