--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
         <section id="redes-sociais">
             <a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt=""></a><br>
-            <a href="youtube.html" target="tela"> <img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
-            <a href="github.html" target="tela"> <img src="imagens/logo-github.jpg" alt=""></a><br>
-            <a href="https://www.instagram.com" target="tela"> <img src="imagens/logo-instagram.jpg" alt=""></a><br>
-            <a href="https://www.globo.com" target="tela"> <img src="imagens/logo-twitter.jpg" alt=""></a><br>
-            <a href="https://www.facebook.com/otaviorivelli" target="tela"> <img src="imagens/logo-facebook.jpg" alt=""></a>
+            <a href="home.html" target="tela"> <img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="home.html" target="tela"> <img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="insta.html" target="tela"> <img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="home.html" target="tela"> <img src="imagens/logo-twitter.jpg" alt=""></a><br>
+            <a href="home.html" target="tela"> <img src="imagens/logo-facebook.jpg" alt=""></a>
 
 
         </section>
